--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
         </section>
     </main>
+    <footer class="mt-10">
+        <p>visit the site stay with us</p>
+    </footer>
     <script src="game.js"></script>
 </body>
 </html>
