--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
         </section>
     </main>
-    <footer class="mt-10">
-        <p>visit the site stay with us</p>
+    <footer class="my-10 text-center bg-gray-900 text-white py-3">
+        <p >Visit the site stay with us</p>
     </footer>
     <script src="game.js"></script>
 </body>
